[tool.poetry]
name = "set-image-capture-date"
version = "0.1.0"
description = ""
authors = ["S Heins <52819981+s-heins@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
main = "src.main:run"

[tool.poetry.dependencies]
python = "^3.11"
piexif = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
